@@ -1,5 +1,6 @@
 package gov.cdc.usds.simplereport.api.graphql;
 
+import static gov.cdc.usds.simplereport.api.model.errors.PrivilegeUpdateFacilityAccessException.PRIVILEGE_UPDATE_FACILITY_ACCESS_ERROR;
 import static java.util.Collections.emptyMap;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -354,7 +355,7 @@ class ApiUserManagementTest extends BaseGraphqlTest {
         extractPermissionsFromUser(user));
     assertLastAuditEntry(
         TestUserIdentities.ORG_ADMIN_USER, operation, ADMIN_PERMISSIONS, List.of());
-    assertUserCanAccessExactFacilities(user, Set.of());
+    assertUserCanAccessExactFacilities(user, Set.of(TestUserIdentities.TEST_FACILITY_1));
 
     verify(_oktaRepo)
         .createUser(
@@ -443,7 +444,9 @@ class ApiUserManagementTest extends BaseGraphqlTest {
     assertEquals("A-Different-FirstName", enabledUser.get("firstName").asText());
     assertEquals("A-Different-LastName", enabledUser.get("lastName").asText());
     assertEquals(Set.of(Role.USER), extractRolesFromUser(enabledUser));
-    assertEquals(Map.of(), extractFacilitiesFromUser(enabledUser));
+    assertEquals(
+        Set.of(TestUserIdentities.TEST_FACILITY_1),
+        extractFacilitiesFromUser(enabledUser).keySet());
     assertEquals(
         EnumSet.of(
             UserPermission.ARCHIVE_PATIENT,
@@ -501,7 +504,7 @@ class ApiUserManagementTest extends BaseGraphqlTest {
             UserPermission.SUBMIT_TEST,
             UserPermission.UPLOAD_RESULTS_SPREADSHEET),
         extractPermissionsFromUser(updateUser));
-    assertUserCanAccessExactFacilities(updateUser, Set.of());
+    assertUserCanAccessExactFacilities(updateUser, Set.of(TestUserIdentities.TEST_FACILITY_1));
   }
 
   @Test
@@ -816,31 +819,22 @@ class ApiUserManagementTest extends BaseGraphqlTest {
     assertUserCanAccessExactFacilities(
         updateUser, Set.of(TestUserIdentities.TEST_FACILITY_1, TestUserIdentities.TEST_FACILITY_2));
     assertUserCanAccessAllFacilities(updateUser);
+  }
 
-    // Update 4: USER, access to no facilities
-    updatePrivilegesVariables =
-        getUpdateUserPrivilegesVariables(
-            id, Role.USER, false, extractFacilityUuidsFromUser(updateUser, Set.of()));
+  @Test
+  void updateUserPrivilegesNoFacilities_orgAdmin_failure() {
+    useOrgAdmin();
 
-    updateResp = runQuery("update-user-privileges", updatePrivilegesVariables);
-    updateUser = (ObjectNode) updateResp.get("updateUserPrivileges");
+    ObjectNode addUser = runBoilerplateAddUserToCurrentOrg(Role.USER);
+    String id = addUser.get("id").asText();
 
-    assertEquals("Standard user", updateUser.get("roleDescription").asText());
-    assertEquals(updateUser.get("role").asText(), Role.USER.name());
-    assertEquals(Set.of(Role.USER), extractRolesFromUser(updateUser));
-    assertEquals(
-        EnumSet.of(
-            UserPermission.READ_PATIENT_LIST,
-            UserPermission.SEARCH_PATIENTS,
-            UserPermission.READ_RESULT_LIST,
-            UserPermission.EDIT_PATIENT,
-            UserPermission.ARCHIVE_PATIENT,
-            UserPermission.START_TEST,
-            UserPermission.UPDATE_TEST,
-            UserPermission.SUBMIT_TEST,
-            UserPermission.UPLOAD_RESULTS_SPREADSHEET),
-        extractPermissionsFromUser(updateUser));
-    assertUserCanAccessExactFacilities(updateUser, Set.of());
+    Map<String, Object> updatePrivilegesVariables =
+        getUpdateUserPrivilegesVariables(id, Role.USER, false, Collections.emptySet());
+
+    runQuery(
+        "update-user-privileges",
+        updatePrivilegesVariables,
+        PRIVILEGE_UPDATE_FACILITY_ACCESS_ERROR);
   }
 
   private ObjectNode runBoilerplateAddUserToCurrentOrg(Role newUserRole) {
@@ -871,6 +865,10 @@ class ApiUserManagementTest extends BaseGraphqlTest {
   }
 
   private Map<String, Object> makeBoilerplateArgs(Role role, boolean useNestedName) {
+    List<UUID> facilities =
+        (role == Role.ADMIN)
+            ? Collections.emptyList()
+            : List.of(extractAllFacilitiesInOrg().get(TestUserIdentities.TEST_FACILITY_1));
     return getAddUserVariables(
         "Rhonda",
         "Janet",
@@ -879,7 +877,8 @@ class ApiUserManagementTest extends BaseGraphqlTest {
         USERNAMES.get(0),
         TestUserIdentities.DEFAULT_ORGANIZATION,
         role.name(),
-        useNestedName);
+        useNestedName,
+        facilities);
   }
 
   @Test
@@ -1087,7 +1086,8 @@ class ApiUserManagementTest extends BaseGraphqlTest {
                 null,
                 USERNAMES.get(2),
                 TestUserIdentities.DEFAULT_ORGANIZATION,
-                Role.ADMIN.name()),
+                Role.ADMIN.name(),
+                Collections.emptyList()),
             getAddUserVariables(
                 "Janice",
                 null,
@@ -1095,7 +1095,8 @@ class ApiUserManagementTest extends BaseGraphqlTest {
                 "Jr",
                 USERNAMES.get(3),
                 TestUserIdentities.DEFAULT_ORGANIZATION,
-                Role.ADMIN.name()));
+                Role.ADMIN.name(),
+                Collections.emptyList()));
     for (Map<String, Object> userVariables : usersAdded) {
       runQuery("add-user-to-current-org", "addUserToCurrentOrgOp", userVariables, null);
     }
@@ -1295,11 +1296,13 @@ class ApiUserManagementTest extends BaseGraphqlTest {
       String email,
       String orgExternalId,
       String role,
-      boolean nestedName) {
+      boolean nestedName,
+      List<UUID> facilities) {
     Map<String, Object> variables = new HashMap<>();
     variables.put("email", email);
     variables.put("organizationExternalId", orgExternalId);
     variables.put("role", role);
+    variables.put("facilities", facilities);
 
     HashMap<String, Object> nameInfo = new HashMap<>();
     nameInfo.put("firstName", firstName);
@@ -1322,9 +1325,10 @@ class ApiUserManagementTest extends BaseGraphqlTest {
       String suffix,
       String email,
       String orgExternalId,
-      String role) {
+      String role,
+      List<UUID> facilities) {
     return getAddUserVariables(
-        firstName, middleName, lastName, suffix, email, orgExternalId, role, false);
+        firstName, middleName, lastName, suffix, email, orgExternalId, role, false, facilities);
   }
 
   private Map<String, Object> getUpdateUserVariables(
